@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-03
+2013-02-05 Andy Salnikov
+- update usdusb.DataV1 definition
+
 Tag: V00-04-02
 2013-02-05 Andy Salnikov
 - upgrading to pdsdata V06-01-04
